# blackwell-diffusion-rtx6000-5090-i2v

./: biome.json  default.nix  flake.nix
android/: .envrc  default.nix
api/characters/: openapi.yaml  redocly.yaml
api/characters/components/parameters/: JobId.yaml  PromptId.yaml
api/characters/paths/: content_generate.yaml  content_jobs_{jobId}.yaml  datasets_generate-batch.yaml  datasets_generate-single.yaml  datasets_jobs_{jobId}.yaml  files_upload.yaml  files_{fileId}.yaml  headshots_generate.yaml  headshots_jobs_{jobId}.yaml  jobs.yaml  jobs_{jobId}.yaml  prompts_generate.yaml  system-prompts.yaml  system-prompts_{promptId}.yaml  training_jobs_{jobId}.yaml  training_submit.yaml
api/fal.ai/: .envrc  default.nix  schnell.fal.ai.openapi.json
api/nunchaku-inference/: openapi.yaml  redocly.yaml
api/nunchaku-inference/paths/: fal-ai_flux-pro_kontext.yaml  fal-ai_flux-pro_kontext_requests_{request_id}.yaml  fal-ai_flux-pro_kontext_requests_{request_id}_status.yaml  fal-ai_flux_dev.yaml  fal-ai_flux_dev_requests_{request_id}.yaml  fal-ai_flux_dev_requests_{request_id}_cancel.yaml  fal-ai_flux_dev_requests_{request_id}_status.yaml  fal-ai_flux_dev_requests_{request_id}_status_stream.yaml  fal-ai_flux_schnell.yaml  fal-ai_flux_schnell_requests_{request_id}.yaml  fal-ai_flux_schnell_requests_{request_id}_status.yaml  fal-ai_qwen-image-edit.yaml  fal-ai_qwen-image-edit_requests_{request_id}.yaml  fal-ai_qwen-image-edit_requests_{request_id}_status.yaml  fal-ai_qwen-image.yaml  fal-ai_qwen-image_image-to-image.yaml  fal-ai_qwen-image_image-to-image_requests_{request_id}.yaml  fal-ai_qwen-image_image-to-image_requests_{request_id}_status.yaml  fal-ai_qwen-image_requests_{request_id}.yaml  fal-ai_qwen-image_requests_{request_id}_status.yaml
api/nunchaku-inference/webhooks/: requestCompleted.yaml
api/sensenet/: .redocly.lint-ignore.yaml  openapi.yaml  redocly.yaml
api/sensenet/paths/: auth_signup.yaml  auth_token.yaml  content_assets_{assetId}.yaml  content_messages.yaml  content_messages_{messageId}.yaml  content_sessions.yaml  content_sessions_{sessionId}.yaml  content_sessions_{sessionId}_messages.yaml  events_media-share.yaml  posts.yaml  posts_{postId}.yaml  posts_{postId}_likes.yaml  recommendations_profiles_featured.yaml  recommendations_profiles_new.yaml  recommendations_profiles_trending.yaml  social_analytics.yaml  social_analytics_posts_{postId}.yaml  social_connect.yaml  social_post.yaml  social_status.yaml  users_detail.yaml  users_profiles.yaml  users_profiles_{profileId}.yaml
api/social-sharing/: openapi.yaml  redocly.yaml
api/social-sharing/paths/: analytics_post.yaml  analytics_social.yaml  comments.yaml  comments_reply.yaml  comments_{id}.yaml  hashtags.yaml  history.yaml  links.yaml  links_{id}_analytics.yaml  media_upload.yaml  post.yaml  post_{id}.yaml  profiles.yaml  profiles_generate-jwt.yaml  profiles_{profileKey}.yaml  user.yaml  webhooks.yaml  webhooks_{id}.yaml
docs/: README_PYTHON.md
fx/: .bazelignore  .dir-locals.el  .envrc  .gitignore  BUILD.bazel  MODULE.bazel  STYLE_GUIDE.md  WORKSPACE.bazel  default.nix  pyproject.nix  pyproject.toml
fx/bzl/: python_torch.bzl  rules_pkg_config.bzl
fx/src/fx/benchmarks/: BUILD.bazel  explicit_swar.cpp
fx/src/fx/examples/abseil-cpp-example/: BUILD.bazel  main.cpp
fx/src/fx/examples/boost/: BUILD.bazel  boost_features_example.cpp
fx/src/fx/examples/catch2/: BUILD.bazel  catch2_property_tests.cpp
fx/src/fx/examples/helloworld/: BUILD.bazel  main.cpp
fx/src/fx/examples/libcuda/: BUILD.bazel  kernel.cu  kernel.cuh  main.cpp
fx/src/fx/examples/libhv/: BUILD.bazel  async_http_proxy.cpp  async_http_request.cpp
fx/src/fx/examples/libtorch/: BUILD.bazel  export_clip.py  export_dit.py  export_flux_pt.py  export_model.py  export_t5.py  export_vae.py  hello-libtorch.cpp  inference.cpp  qwen_generate_embedded_v1.cpp  run_flux_from_pt.py
fx/src/fx/examples/magic_enum/: BUILD.bazel  main.cpp
fx/src/fx/examples/mio/: BUILD.bazel  main.cpp
fx/src/fx/examples/nunchaku-py/: nunchaku-generate-v2.py  nunchaku-generate.py  nunchaku-kontext-example.py  nunchaku-qwen-edit.py  nunchaku-qwen-generate.py  nunchaku-schnell-generate.py  nunchaku-schnell-local-generate.py
fx/src/fx/examples/nvfp4/: BUILD.bazel  gemm_nvfp4_bf16_nvidia.cu  gemm_nvfp4_grouped_nvidia.cu  gemm_nvfp4_nvfp4_nvidia.cpp  gemm_nvfp4_nvfp4_nvidia.cu  gemm_nvfp4_nvfp4_nvidia.cuh  helper.h
fx/src/fx/examples/py/: BUILD.bazel  does_it_work.py
fx/src/fx/examples/pybind11/: BUILD.bazel  extension.cpp  test_extension.py
fx/src/fx/examples/safetensors/: BUILD.bazel  main.cpp
fx/src/fx/examples/zpp_bits/: BUILD.bazel  main.cpp
fx/src/s4/models/wan22/: BUILD.bazel  bench_te_nvfp4.py  megafp4.py  megaupload.py  te_fp4_patch.py  test_te_nvfp4.py  wan_autoencoder.py  wan_loader.py  wan_transformer.py  wan_transformer_fast.py  wan_transformer_megaupload.py
fx/src/s4/models/wan22/bzl/: default.nix  pybind11.bzl
fx/src/s4/models/wan_22/: ARCHITECTURE.md  README.md  example_complete.py  example_usage.py  test_wan_attention.py  test_wan_separated.py  wan_2_2_attention_annotated.py  wan_attention_cfg_static.py  wan_attention_diffusers.py  wan_attention_dynamic.py  wan_attention_pure.py  wan_attention_static.py  wan_cfg_router.py  wan_config_calculator.py  wan_deployment_wizard.py  wan_serialization.py  wan_static_factory.py
fx/src/s4/nvfp4/: BUILD.bazel  bindings.cpp  kernel.cu  kernel.cuh  nvfp4_example.py  nvfp4_test.py  quantization.cu  quantization.cuh  quantization_te.cu  quantization_te_clean.cu  tensor.cpp  tensor.h  test_basic.cpp  test_gemm.cpp  test_nvfp4_gemm_te.py  test_nvfp4_quantize_te.py  test_quantization.cpp  test_runner.py  test_tensor.cpp  test_utils.cpp
fx/src/s4/nvfp4/.claude/: settings.local.json
fx/src/s4/nvfp4/kernels/: gemm.cu
fx/src/s4/nvfp4/linear/: BUILD.bazel  nvfp4_gemm_kernel.cu  nvfp4_gemm_kernel.cuh  nvfp4_gemm_runner.py  nvfp4_linear.cpp  nvfp4_linear_module.py
fx/src/utils/pybind/: BUILD.bazel
idoru/apps/react-native-app/: .yarnrc.yml  README.md  app.json
(+181 files in other folders)
