[project]
name = "fx"
version = "0.1.0"
description = "// fx //"
readme = "README.md"

requires-python = ">=3.13"

dependencies = [
  "accelerate>=1.10.1",
  "boto3>=1.40.31",
  "diffusers==0.35.1",
  "fastapi>=0.116.1",
  "ftfy>=6.3.1",
  "gradio>=5.49.0",
  "imageio>=2.37.0",
  "imageio-ffmpeg>=0.6.0",
  "numpy>=2.3.2",
  "nunchaku",
  "nvidia-cutlass>=4.2.0.0",
  "opencv-python>=4.11.0.86",
  "peft>=0.17.1",
  "pillow>=11.3.0",
  "protobuf>=6.32.1",
  "pydantic>=2.11.7",
  "pynvml>=13.0.1",
  "sentencepiece>=0.2.1",
  "torch>=2.8.0",
  "torchao>=0.13.0",
  "torchvision>=0.23.0",
  "transformers==4.55.0",
  "triton>=3.4.0",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
  "basedpyright>=1.31.3",
  "pyright>=1.1.404",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.12.11",
  "ty>=0.0.1a19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fx"]

[tool.uv.sources]
nunchaku = { url = "https://github.com/nunchaku-tech/nunchaku/releases/download/v1.0.1/nunchaku-1.0.1+torch2.8-cp313-cp313-linux_x86_64.whl" }
