load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(default_visibility = ["//visibility:public"])

cuda_library(
    name = "kernel",
    srcs = ["kernel.cu"],
    hdrs = ["kernel.cuh"],
    deps = [
        "@pkg_config//:libtorch",
    ],
)

cc_binary(
    name = "cuda_main",
    srcs = ["main.cpp"],
    deps = [
        ":kernel",
        "@pkg_config//:cuda",
        "@pkg_config//:libtorch",
        "@pkg_config//:spdlog",
    ],
)
